# EchoWise

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: tauri-dev.sh
src/: App.tsx  appearance.ts  audio.ts  companions.ts  db.ts  index.css  providers.ts  scoring.ts  storage.ts  store.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AboutPanel.tsx  AppearanceHost.tsx  AppearancePanel.tsx  Avatar.tsx  AvatarPicker.tsx  Companions.tsx  Conversation.tsx  Growth.tsx  Logo.tsx  ProviderPanel.tsx  Settings.tsx  Sidebar.tsx  Waveform.tsx
src/lib/: cn.ts
tests/: appearance.test.ts  audio.test.ts  companions.test.ts  db.test.ts  providers.test.ts  scoring.test.ts  setup.ts  storage.test.ts  store.test.ts  store.updater.test.ts  types.test.ts  updater.test.ts
tests/__mocks__/: tauri-fs.ts  tauri-process.ts  tauri-sql.ts  tauri-updater.ts
tests/components/: AboutPanel.test.tsx  AppearanceHost.test.tsx  AppearancePanel.test.tsx  Avatar.test.tsx  AvatarPicker.test.tsx  Companions.test.tsx  Conversation.deep.test.tsx  Conversation.interactions.test.tsx  Conversation.test.tsx  Growth.test.tsx  Logo.test.tsx  ProviderPanel.test.tsx  Settings.test.tsx  Sidebar.test.tsx  Waveform.test.tsx
tests/lib/: cn.test.ts
(+10 files in other folders)
